--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "engines": {
+    "node": "5.7.0"
+  },
   "private": true,
   "name": "remik-game",
   "version": "0.0.1",
   "description": "A Facebook Rummy game",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No test specified\" && exit 0",
     "start": "./node_modules/.bin/babel-node tools/run start",
     "clean": "./node_modules/.bin/babel-node tools/run clean",
     "copy": "./node_modules/.bin/babel-node tools/run copy",
@@ -25,6 +28,7 @@
     "bluebird": "^3.3.4",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "dateformat": "^1.0.12",
     "del": "^2.2.0",
     "extend": "^3.0.0",
     "gaze": "^1.0.0",
