Add basic Facebook integration to chat

--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "dateformat": "^1.0.12",
     "del": "^2.2.0",
     "extend": "^3.0.0",
+    "foreman": "^1.4.1",
     "gaze": "^1.0.0",
     "git-repository": "^0.1.4",
     "isomorphic-style-loader": "0.0.12",
+    "json-loader": "^0.5.4",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.2",
@@ -50,11 +52,13 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
+    "body-parser": "^1.15.0",
     "connect-redis": "^3.0.2",
     "ejs": "^2.4.1",
+    "events": "^1.1.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "fb": "^1.0.2",
+    "fb": "^1.1.0-alpha1",
     "mongoose": "^4.4.11",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
