--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dateformat": "^1.0.12",
     "del": "^2.2.0",
     "extend": "^3.0.0",
+    "fbjs": "^0.8.0",
     "foreman": "^1.4.1",
     "gaze": "^1.0.0",
     "git-repository": "^0.1.4",
@@ -47,6 +48,7 @@
     "ncp": "^2.0.0",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.8.2",
+    "postcss-scss": "^0.1.7",
     "sinon": "^1.17.3",
     "webpack": "^1.12.14"
   },
@@ -59,7 +61,9 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "fb": "^1.1.0-alpha1",
+    "flux": "^2.1.1",
     "mongoose": "^4.4.11",
+    "normalize.css": "^4.0.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "redis": "^2.6.0-1",
