--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,4 @@
-{ "presets": ["es2015", "stage-3"] }
+{
+  "presets": ["es2015", "stage-0"],
+  "plugins": ["syntax-async-functions", "transform-decorators-legacy"]
+}
