--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "babel-cli": "^6.6.5",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-3": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.4",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
@@ -35,7 +36,6 @@
     "foreman": "^1.4.1",
     "gaze": "^1.0.0",
     "git-repository": "^0.1.4",
-    "isomorphic-style-loader": "0.0.12",
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
@@ -46,11 +46,14 @@
     "mkdirp": "^0.5.1",
     "mocha": "^2.4.5",
     "ncp": "^2.0.0",
+    "node-sass": "^3.8.0",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.8.2",
     "postcss-scss": "^0.1.7",
+    "sass-loader": "^3.2.1",
     "sinon": "^1.17.3",
-    "webpack": "^1.12.14"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
@@ -61,12 +64,16 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "fb": "^1.1.0-alpha1",
-    "flux": "^2.1.1",
+    "immutable": "^3.8.1",
     "mongoose": "^4.4.11",
+    "mongoose-decorators": "^0.2.0",
     "normalize.css": "^4.0.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-redux": "^4.4.5",
     "redis": "^2.6.0-1",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5"
   }
