--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "private": true,
   "name": "remik-game",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A Facebook Rummy game",
   "scripts": {
     "test": "echo \"No test specified\" && exit 0",
@@ -33,6 +33,7 @@
     "del": "^2.2.0",
     "extend": "^3.0.0",
     "fbjs": "^0.8.0",
+    "file-loader": "^0.9.0",
     "foreman": "^1.4.1",
     "gaze": "^1.0.0",
     "git-repository": "^0.1.4",
@@ -53,6 +54,7 @@
     "sass-loader": "^3.2.1",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
   },
   "dependencies": {
