--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "0.0.3",
   "description": "A Facebook Rummy game",
   "scripts": {
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "./node_modules/.bin/mocha $(find common server -name 'test-*.js') --compilers js:babel-core/register",
     "start": "./node_modules/.bin/babel-node tools/run start",
     "clean": "./node_modules/.bin/babel-node tools/run clean",
     "copy": "./node_modules/.bin/babel-node tools/run copy",
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.6.5",
+    "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
