Add rewire and chai-immutable for tests

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "0.0.3",
   "description": "A Facebook Rummy game",
   "scripts": {
-    "test": "./node_modules/.bin/mocha $(find common server -name 'test-*.js') --compilers js:babel-core/register",
+    "test": "./node_modules/.bin/mocha $(find common server -name '*-test.js') --compilers js:babel-core/register",
     "start": "./node_modules/.bin/babel-node tools/run start",
     "clean": "./node_modules/.bin/babel-node tools/run clean",
     "copy": "./node_modules/.bin/babel-node tools/run copy",
@@ -29,6 +29,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.3.4",
     "chai": "^3.5.0",
+    "chai-immutable": "^1.6.0",
     "css-loader": "^0.23.1",
     "dateformat": "^1.0.12",
     "del": "^2.2.0",
@@ -52,6 +53,7 @@
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.8.2",
     "postcss-scss": "^0.1.7",
+    "rewire": "^2.5.2",
     "sass-loader": "^3.2.1",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
