--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "private": true,
   "name": "remik-game",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A Facebook Rummy game",
   "scripts": {
     "test": "./node_modules/.bin/mocha $(find common server -name '*-test.js') --compilers js:babel-core/register",
@@ -89,6 +89,7 @@
     "express-session": "^1.13.0",
     "fb": "^1.1.0-alpha1",
     "immutable": "^3.8.1",
+    "lodash": "^4.13.1",
     "mongoose": "^4.4.11",
     "mongoose-decorators": "^0.2.0",
     "normalize.css": "^4.0.0",
