--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node": "5.7.0"
+    "node": "6.6.0"
   },
   "private": true,
   "name": "remik-game",
@@ -84,22 +84,33 @@
     "babel-polyfill": "^6.7.4",
     "body-parser": "^1.15.0",
     "connect-redis": "^3.0.2",
+    "css-loader": "^0.25.0",
     "ejs": "^2.4.1",
+    "eslint-plugin-react": "^6.3.0",
     "events": "^1.1.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "fb": "^1.1.0-alpha1",
+    "foreman": "^2.0.0",
     "immutable": "^3.8.1",
+    "karma": "^1.3.0",
+    "karma-mocha": "^1.2.0",
     "lodash": "^4.13.1",
+    "mocha": "^3.1.0",
     "mongoose": "^4.4.11",
     "mongoose-decorators": "^0.2.0",
     "normalize.css": "^4.0.0",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "postcss-loader": "^0.13.0",
+    "postcss-scss": "^0.3.0",
+    "react": "^15.3.2",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redis": "^2.6.0-1",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.0.2",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5"
   }
