--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:client": "webpack",
     "build": "npm run build:client",
     "clean": "rimraf build/*",
-    "start": "webpack-dev-server --port 3000 --host 0.0.0.0 --content-base build/dist/ --history-api-fallback --inline",
+    "start": "node server.js",
     "lint": "eslint ./client",
     "test": "jest --config .jestrc.json",
     "test:w": "jest --config .jestrc.json --watch"
@@ -18,6 +18,7 @@
   "author": "Patryk Kalinowski",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.16.5",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "rxjs": "^5.0.0-rc.1"
@@ -48,10 +49,13 @@
     "jest": "^16.0.2",
     "jest-enzyme": "^2.0.0",
     "postcss-loader": "^1.1.0",
+    "react-hot-loader": "3.0.0-beta.6",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.1"
   }
 }
