Add forgotten dependency

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^16.0.2",
     "jest-enzyme": "^2.0.0",
+    "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^1.1.0",
     "react-hot-loader": "3.0.0-beta.6",
     "rimraf": "^2.5.4",
