--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Patryk Kalinowski",
   "license": "ISC",
   "dependencies": {
+    "cuid": "^1.3.8",
     "keycode": "^2.1.7",
     "lodash": "^4.16.5",
     "react": "^15.3.2",
@@ -44,6 +45,7 @@
     "eslint-config-patrislav": "^0.2.0",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-react": "^6.4.1",
+    "faker": "^3.1.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.0",
     "identity-obj-proxy": "^3.0.0",
