--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "lodash": "^4.16.5",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-observable": "^0.12.1",
     "rxjs": "^5.0.0-rc.1"
   },
   "devDependencies": {
